--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -13,6 +13,9 @@
   display: flex; }
 
 .col {
+  margin: 20px; }
+
+.col {
   flex: 1; }
 
 .col3 {
@@ -36,7 +39,7 @@
   margin: 0px; }
 
 body, html {
-  background-color: #d1cfde;
+  background-color: #eff0f9;
   font-family: 'Play', sans-serif;
   color: #333;
   letter-spacing: 0.1em; }
@@ -47,11 +50,17 @@ body, html {
 nav {
   background-color: #c31200;
   width: 100%;
-  height: 20px; }
+  height: 0px; }
 
 header .logo {
   content: url("../media/logo.png");
   height: 200px; }
+
+#line {
+  background: url("../media/line.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 10px; }
 
 /*
 ---------------------------------
@@ -59,10 +68,10 @@ header .logo {
 ---------------------------------
 */
 .text {
-  padding: 3%;
-  text-align: justify; }
+  padding: 3%; }
+  .text .center {
+    text-align: justify; }
   .text p {
-    margin: 20px;
     position: relative;
     text-indent: 50px; }
   .text ul {
@@ -88,8 +97,26 @@ header .logo {
       padding-top: 30px;
       font-weight: 700; }
 
-h3 {
-  margin: 0px; }
+h2 {
+  margin: 0px;
+  color: #c31200;
+  text-shadow: 2px 2px 2px #25354f;
+  margin-top: 40px; }
+  h2#i1:before {
+    content: url(../media/icon2.png);
+    padding-right: 20px;
+    display: table-row;
+    opacity: 0.2; }
+  h2#i2:before {
+    content: url(../media/icon1.png);
+    padding-right: 20px;
+    display: table-row;
+    opacity: 0.2; }
+  h2#i3:before {
+    content: url(../media/icon3.png);
+    padding-right: 20px;
+    display: table-row;
+    opacity: 0.2; }
 
 /*
 ---------------------------------
@@ -108,66 +135,5 @@ h3 {
 
 #parallax-C {
   background: url("../media/bckg3.jpg");
-  min-height: 70%;
+  height: 30%;
   padding-bottom: 20px; }
-
-/*
----------------------------------
-		New 
----------------------------------
-*/
-/*
----------------------------------
-		GOOGLE MAP
----------------------------------
-*/
-#google-container {
-  position: relative;
-  width: 100%;
-  height: 100vh; }
-  @media only screen and (min-width: 768px) {
-    #google-container {
-      height: 300px; } }
-  @media only screen and (min-width: 1170px) {
-    #google-container {
-      height: 600px; } }
-
-#cd-google-map {
-  border: solid 3px #25354f;
-  position: relative; }
-  #cd-google-map address {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    background-color: rgba(195, 18, 0, 0.9);
-    color: red;
-    font-size: 13px; }
-    @media only screen and (min-width: 768px) {
-      #cd-google-map address {
-        font-size: 15px;
-        text-align: center; } }
-
-#cd-zoom-in, #cd-zoom-out {
-  height: 32px;
-  width: 32px;
-  cursor: pointer;
-  margin-left: 10px;
-  background-color: rgba(195, 18, 0, 0.9);
-  background-repeat: no-repeat;
-  background-size: 32px 64px;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-controller.svg");
-  /* !!! background image */ }
-  @media only screen and (min-width: 768px) {
-    #cd-zoom-in, #cd-zoom-out {
-      margin-left: 50px; } }
-
-#cd-zoom-in {
-  background-position: 50% 0;
-  margin-top: 10px;
-  margin-bottom: 1px; }
-  @media only screen and (min-width: 768px) {
-    #cd-zoom-in {
-      margin-top: 50px; } }
-
-#cd-zoom-out {
-  background-position: 50% -32px; }
