--- a/v1/sass/style.scss
+++ b/v1/sass/style.scss
@@ -1,8 +1,8 @@
-$mainColor: #25354f;
-$Col2: #c31200;
+$mainColor: #25354f; //blue
+$Col2: #c31200; //red 
 $Col3: red;
 $Bg1: #FFF;
-$Bg2: #d1cfde;
+$Bg2: #eff0f9; //grey
 
 
 /*
@@ -36,8 +36,11 @@ $L:     1170px;
 */
 .flex-row {
   display: flex; 
-
 }
+.col {
+	margin: 20px;
+}
+
 .col {flex:1}
 .col3 {flex:3}
 .col7 {flex:7}
@@ -77,15 +80,28 @@ body, html {
 nav{
 	background-color: $Col2;
 	width: 100%;
-	height: 20px;
+	height: 0px;
 }
 
 header {
+	
 	.logo{
 		content:url("../media/logo.png"); 
 		height: 200px;
 	}
 }
+
+#line {
+	background: url("../media/line.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 10px;
+    
+
+}
+
+
+
 
 
 /*
@@ -96,10 +112,10 @@ header {
 
 .text{
 	padding: 3%;
-	
-	text-align: justify;
+	.center {
+		text-align: justify;
+	}
 	p {	
-  		margin: 20px;
 		position: relative;
 		text-indent: 50px;
 		}
@@ -131,9 +147,32 @@ header {
 	}
 }
 
-h3{
+h2{
 	margin: 0px;
+	color: $Col2;
+	text-shadow: 2px 2px 2px $mainColor;
+	margin-top: 40px;	
+
+	&#i1:before{
+		content: url(../media/icon2.png);
+		padding-right: 20px;	
+		display: table-row;
+		opacity: 0.2;
+	}
+	&#i2:before{
+		content: url(../media/icon1.png);
+		padding-right: 20px;
+		display: table-row;	
+		opacity: 0.2;
+	}
+	&#i3:before{
+		content: url(../media/icon3.png);
+		padding-right: 20px;
+		display: table-row;	
+		opacity: 0.2;
+	}
 }
+
 
 
 /*
@@ -155,96 +194,11 @@ h3{
 
 #parallax-C {
 	background: url("../media/bckg3.jpg");
-	min-height: 70%;
+	//min-height: 70%;
+	height: 30%;
 	padding-bottom: 20px;
 }
 
 
 
-/*
----------------------------------
-		New 
----------------------------------
-*/
-/*
----------------------------------
-		GOOGLE MAP
----------------------------------
-*/
-
-
-// layout - breakpoints
-//$S:     320px;   
-//$M:     768px;     
-//$L:     1170px;         
-
-// layout - media queries
-@mixin MQ($canvas) {
-  @if $canvas == S {
-   @media only screen and (min-width: $S) { @content; } 
-  }
-  @else if $canvas == M {
-   @media only screen and (min-width: $M) { @content; } 
-  }
-  @else if $canvas == L {
-   @media only screen and (min-width: $L) { @content; } 
-  }
-}
-
-#google-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    @include MQ(M) {
-    	height: 300px;
-    }
-
-    @include MQ(L) {
-    	height: 600px;
-    }
-}
-
-#cd-google-map {
-	border: solid 3px $mainColor;
-  	position: relative;
-	address {
-		position: absolute;
-		width: 100%;
-		bottom: 0;
-		background-color: rgba($Col2, .9);
-		color: $Col3;
-		font-size: 13px;
-		@include MQ(M) {
-			font-size:15px;
-			text-align: center;
-		}
-	}
-}
-
-#cd-zoom-in, #cd-zoom-out {
-	height: 32px;
-	width: 32px;
-	cursor: pointer;
-	margin-left: 10px;
-	background-color: rgba($Col2, .9);
-	background-repeat: no-repeat;
-	background-size: 32px 64px;
-	background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-controller.svg');
-	/* !!! background image */	
-	@include MQ(M) {
-		margin-left: 50px;
-	}
-}
-#cd-zoom-in {
-	background-position: 50% 0;
-	margin-top: 10px;
-	margin-bottom: 1px;
-
-	@include MQ(M) {
-		margin-top: 50px;
-	}
-}
-#cd-zoom-out {
-	background-position: 50% -32px;
-}
 
