--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -32,6 +32,245 @@
       flex: 1; } }
 /*
 ---------------------------------
+		GOOGLE MAP
+---------------------------------
+*/
+#google-container {
+  position: relative;
+  width: 100%;
+  height: 100vh; }
+  @media only screen and (min-width: 768px) {
+    #google-container {
+      height: 300px; } }
+  @media only screen and (min-width: 1170px) {
+    #google-container {
+      height: 600px; } }
+
+#cd-google-map {
+  border: solid 3px #25354f;
+  position: relative; }
+  #cd-google-map address {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    background-color: #25354f;
+    color: white;
+    font-size: 13px; }
+    @media only screen and (min-width: 768px) {
+      #cd-google-map address {
+        font-size: 15px;
+        text-align: center; } }
+
+#cd-zoom-in, #cd-zoom-out {
+  height: 32px;
+  width: 32px;
+  cursor: pointer;
+  margin-left: 10px;
+  background-color: #25354f;
+  background-repeat: no-repeat;
+  background-size: 32px 64px;
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-controller.svg");
+  /* !!! background image */ }
+  @media only screen and (min-width: 768px) {
+    #cd-zoom-in, #cd-zoom-out {
+      margin-left: 50px; } }
+
+#cd-zoom-in {
+  background-position: 50% 0;
+  margin-top: 10px;
+  margin-bottom: 1px; }
+  @media only screen and (min-width: 768px) {
+    #cd-zoom-in {
+      margin-top: 50px; } }
+
+#cd-zoom-out {
+  background-position: 50% -32px; }
+
+/*
+---------------------------------
+		FORM 
+---------------------------------
+*/
+button {
+  overflow: visible; }
+
+button, select {
+  text-transform: none; }
+
+button, input, select, textarea {
+  color: #25354f;
+  font: inherit;
+  margin: 0; }
+
+input {
+  line-height: normal; }
+
+textarea {
+  overflow: auto; }
+
+#form-holder {
+  border: solid 3px #25354f;
+  background-color: white;
+  max-width: 700px;
+  margin: 60px auto;
+  position: relative; }
+
+form {
+  padding: 37.5px;
+  margin: 50px 0; }
+
+h1 {
+  color: #25354f;
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: 7px;
+  text-align: center;
+  text-transform: uppercase; }
+
+.underline {
+  border-bottom: solid 2px #25354f;
+  margin: -0.512em auto;
+  width: 80px; }
+
+.icon_wrapper {
+  margin: 50px auto 0;
+  width: 100%; }
+
+.icon {
+  display: block;
+  fill: #474544;
+  height: 50px;
+  margin: 0 auto;
+  width: 50px; }
+
+.email {
+  float: right;
+  width: 45%; }
+
+input[type='text'], [type='email'], select, textarea {
+  background: none;
+  border: none;
+  border-bottom: solid 2px #25354f;
+  color: #25354f;
+  font-size: 1.000em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 0em 0 1.875em 0;
+  padding: 0 0 0.875em 0;
+  text-transform: uppercase;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+
+input[type='text']:focus, [type='email']:focus, textarea:focus {
+  outline: none;
+  padding: 0 0 0.875em 0; }
+
+.message {
+  float: none; }
+
+.name {
+  float: left;
+  width: 45%; }
+
+select {
+  background: url("https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png") no-repeat right;
+  outline: none;
+  -moz-appearance: none;
+  -webkit-appearance: none; }
+
+select::-ms-expand {
+  display: none; }
+
+.subject {
+  width: 100%; }
+
+.telephone {
+  width: 100%; }
+
+textarea {
+  line-height: 150%;
+  height: 150px;
+  resize: none;
+  width: 100%; }
+
+::-webkit-input-placeholder {
+  color: #25354f; }
+
+:-moz-placeholder {
+  color: #25354f;
+  opacity: 1; }
+
+::-moz-placeholder {
+  color: #25354f;
+  opacity: 1; }
+
+:-ms-input-placeholder {
+  color: #25354f; }
+
+#form_button {
+  background: none;
+  border: solid 2px #25354f;
+  color: #474544;
+  cursor: pointer;
+  display: inline-block;
+  font-family: 'Helvetica', Arial, sans-serif;
+  font-size: 0.875em;
+  font-weight: bold;
+  outline: none;
+  padding: 20px 35px;
+  text-transform: uppercase;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+
+#form_button:hover {
+  background: #25354f; }
+
+/*  IKONKY ............................................. */
+.kontakt a[href^="mailto:"]:before {
+  content: "\f0e0";
+  font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
+  margin-right: 18px;
+  text-decoration: none; }
+
+.kontakt a.mobil[href^="tel:"]:before {
+  content: "\f10b";
+  font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
+  margin-right: 18px;
+  font-size: 120%;
+  text-decoration: none; }
+
+.kontakt a.fax[href^="tel:"]:before {
+  content: "\f02f";
+  font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
+  margin-right: 18px;
+  text-decoration: none; }
+
+.kontakt a[href^="tel:"]:before {
+  content: "\f095";
+  font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
+  margin-right: 18px;
+  text-decoration: none; }
+
+.kontakt a[href^="http://"]:before {
+  content: "\f0c1";
+  font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
+  margin-right: 8px;
+  text-decoration: none; }
+
+/*
+---------------------------------
 		New 
 ---------------------------------
 */
@@ -118,6 +357,9 @@ h2 {
     display: table-row;
     opacity: 0.2; }
 
+.fakturacne {
+  font-size: 80%; }
+
 /*
 ---------------------------------
 		New 
@@ -137,3 +379,16 @@ h2 {
   background: url("../media/bckg3.jpg");
   height: 30%;
   padding-bottom: 20px; }
+
+/*
+---------------------------------
+		KONTAKT
+---------------------------------
+*/
+.kontakt {
+  text-align: left;
+  padding: 5%;
+  color: #25354f; }
+
+.kontakt a {
+  text-decoration: none; }
