--- a/v1/sass/style.scss
+++ b/v1/sass/style.scss
@@ -329,18 +329,20 @@ h2{
 position: fixed;
 	right: 30px;
   margin-top:10px;
-  padding-right: 20px;
   background-color: transparent;
   float: right; 
   z-index: 100000000;
-  ul {margin: 0px; padding: 0px;}
+  ul {margin: 0px; 
+  	padding: 0px;
+  	}
+
+
 
   
 }
 
 .menu__list {
   padding: 0;
-  margin: 0;
   float: right;
   padding-right: 20px;
   text-align: right;
@@ -356,8 +358,11 @@ position: fixed;
 
 .menu__item {
   display: inline-block;
+  width: 120px;
   background-color: $mainColor; 
   padding: 5px;
+  text-align: center;
+  margin: -10px;
   a {
   	font-weight: 700;
   font-family: "Montserrat";
@@ -375,7 +380,7 @@ position: fixed;
 }
 
 .menu__item:hover {
-  	background-color: black;
+  	
   	color: $mainColor; 
   
   a {
@@ -396,8 +401,8 @@ position: fixed;
   display: none;
   width: 30px;
   height: 20px;
-  border-top: 5px solid black;
-  border-bottom: 5px solid black;
+  border-top: 5px solid $mainColor;
+  border-bottom: 5px solid $mainColor;
   cursor: pointer;
   margin: 3px;
 
@@ -416,7 +421,7 @@ position: fixed;
   display: block;
   width: 30px;
   height: 5px;
-  background-color: black;
+  background-color: $mainColor;
   top: 7px;
   position: absolute;
   content: "";
@@ -424,7 +429,7 @@ position: fixed;
 
 
 
-@media screen and (max-width: 640px) {
+//@media screen and (max-width: 640px) {
   .menu__item {
     display: block;
   }
@@ -432,17 +437,17 @@ position: fixed;
   .menu__btn {
     display: block;
   }
-}
+//}
 
-@media screen and (min-width: 641px)  {
-  .menu {
-  	margin-top:-18px;
-  }
-  .menu__list {
-    display: block;
-    border: 0px;
-  }
-}
+//@media screen and (min-width: 641px)  {
+//  .menu {
+//  	margin-top:-18px;
+//  }
+//  .menu__list {
+//    display: block;
+//    border: 0px;
+//  }
+//}
 
 
 
