--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -10,35 +10,26 @@
 ---------------------------------
 */
 .flex-row {
-  display: flex;
-}
+  display: flex; }
 
 .col {
-  margin: 20px;
-}
+  margin: 20px; }
 
 .col {
-  flex: 1;
-}
+  flex: 1; }
 
 .col3 {
-  flex: 3;
-}
+  flex: 3; }
 
 .col7 {
-  flex: 7;
-}
+  flex: 7; }
 
 /* !!! */
 @media (max-width: 700px) {
   .flex-row {
-    display: block;
-  }
-  .flex-row .col {
-    flex: 1;
-  }
-}
-
+    display: block; }
+    .flex-row .col {
+      flex: 1; } }
 /*
 ---------------------------------
 		GOOGLE MAP
@@ -47,42 +38,29 @@
 #google-container {
   position: relative;
   width: 100%;
-  height: 100vh;
-}
-
-@media only screen and (min-width: 768px) {
-  #google-container {
-    height: 300px;
-  }
-}
-
-@media only screen and (min-width: 1170px) {
-  #google-container {
-    height: 600px;
-  }
-}
+  height: 100vh; }
+  @media only screen and (min-width: 768px) {
+    #google-container {
+      height: 300px; } }
+  @media only screen and (min-width: 1170px) {
+    #google-container {
+      height: 600px; } }
 
 #cd-google-map {
   border-top: solid 3px #25354f;
   border-bottom: solid 5px #25354f;
-  position: relative;
-}
-
-#cd-google-map address {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  background-color: #25354f;
-  color: white;
-  font-size: 13px;
-}
-
-@media only screen and (min-width: 768px) {
+  position: relative; }
   #cd-google-map address {
-    font-size: 15px;
-    text-align: center;
-  }
-}
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    background-color: #25354f;
+    color: white;
+    font-size: 13px; }
+    @media only screen and (min-width: 768px) {
+      #cd-google-map address {
+        font-size: 15px;
+        text-align: center; } }
 
 #cd-zoom-in, #cd-zoom-out {
   height: 32px;
@@ -93,30 +71,21 @@
   background-repeat: no-repeat;
   background-size: 32px 64px;
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-controller.svg");
-  /* !!! background image */
-}
-
-@media only screen and (min-width: 768px) {
-  #cd-zoom-in, #cd-zoom-out {
-    margin-left: 50px;
-  }
-}
+  /* !!! background image */ }
+  @media only screen and (min-width: 768px) {
+    #cd-zoom-in, #cd-zoom-out {
+      margin-left: 50px; } }
 
 #cd-zoom-in {
   background-position: 50% 0;
   margin-top: 10px;
-  margin-bottom: 1px;
-}
-
-@media only screen and (min-width: 768px) {
-  #cd-zoom-in {
-    margin-top: 50px;
-  }
-}
+  margin-bottom: 1px; }
+  @media only screen and (min-width: 768px) {
+    #cd-zoom-in {
+      margin-top: 50px; } }
 
 #cd-zoom-out {
-  background-position: 50% -32px;
-}
+  background-position: 50% -32px; }
 
 /*
 ---------------------------------
@@ -124,43 +93,35 @@
 ---------------------------------
 */
 button {
-  overflow: visible;
-}
+  overflow: visible; }
 
 button, select {
-  text-transform: none;
-}
+  text-transform: none; }
 
 button, input, select, textarea {
   color: #25354f;
   font: inherit;
-  margin: 0;
-}
+  margin: 0; }
 
 input {
-  line-height: normal;
-}
+  line-height: normal; }
 
 textarea {
-  overflow: auto;
-}
+  overflow: auto; }
 
 #form-holder {
   border: solid 3px #25354f;
   background-color: white;
   max-width: 700px;
   margin: 60px auto;
-  position: relative;
-}
+  position: relative; }
 
 form {
   padding: 37.5px;
-  margin: 50px 0;
-}
+  margin: 50px 0; }
 
 label {
-  color: grey;
-}
+  color: grey; }
 
 h1 {
   color: #25354f;
@@ -168,32 +129,27 @@ h1 {
   font-weight: 700;
   letter-spacing: 7px;
   text-align: center;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 .underline {
   border-bottom: solid 2px #25354f;
   margin: -0.512em auto;
-  width: 80px;
-}
+  width: 80px; }
 
 .icon_wrapper {
   margin: 50px auto 0;
-  width: 100%;
-}
+  width: 100%; }
 
 .icon {
   display: block;
   fill: #474544;
   height: 50px;
   margin: 0 auto;
-  width: 50px;
-}
+  width: 50px; }
 
 .email {
   float: right;
-  width: 45%;
-}
+  width: 45%; }
 
 input[type='text'], [type='email'], select, textarea {
   background: none;
@@ -216,66 +172,53 @@ input[type='text'], [type='email'], select, textarea {
   -moz-transition: all 0.3s;
   -ms-transition: all 0.3s;
   -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
+  transition: all 0.3s; }
 
 input[type='text']:focus, [type='email']:focus, textarea:focus {
   outline: none;
-  padding: 0 0 0.875em 0;
-}
+  padding: 0 0 0.875em 0; }
 
 .message {
-  float: none;
-}
+  float: none; }
 
 .name {
   float: left;
-  width: 45%;
-}
+  width: 45%; }
 
 select {
   background: url("https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png") no-repeat right;
   outline: none;
   -moz-appearance: none;
-  -webkit-appearance: none;
-}
+  -webkit-appearance: none; }
 
 select::-ms-expand {
-  display: none;
-}
+  display: none; }
 
 .subject {
-  width: 100%;
-}
+  width: 100%; }
 
 .telephone {
-  width: 100%;
-}
+  width: 100%; }
 
 textarea {
   line-height: 150%;
   height: 150px;
   resize: none;
-  width: 100%;
-}
+  width: 100%; }
 
 ::-webkit-input-placeholder {
-  color: #25354f;
-}
+  color: #25354f; }
 
 :-moz-placeholder {
   color: #25354f;
-  opacity: 1;
-}
+  opacity: 1; }
 
 ::-moz-placeholder {
   color: #25354f;
-  opacity: 1;
-}
+  opacity: 1; }
 
 :-ms-input-placeholder {
-  color: #25354f;
-}
+  color: #25354f; }
 
 #form_button {
   background: none;
@@ -293,62 +236,51 @@ textarea {
   -moz-transition: all 0.3s;
   -ms-transition: all 0.3s;
   -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
+  transition: all 0.3s; }
 
 #form_button:hover {
-  background: #25354f;
-}
+  background: #25354f; }
 
 #frmContact {
   margin: 20px;
   padding: 20px;
   border: solid 1px #25354f;
-  background-color: white;
-}
-
-@media (max-width: 500px) {
-  #frmContact {
-    margin: 5px;
-  }
-}
+  background-color: white; }
+  @media (max-width: 500px) {
+    #frmContact {
+      margin: 5px; } }
 
 /*  IKONKY ............................................. */
 .kontakt a[href^="mailto:"]:before {
   content: "\f0e0";
   font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
   margin-right: 18px;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .kontakt a.mobil[href^="tel:"]:before {
   content: "\f10b";
   font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
   margin-right: 18px;
   font-size: 120%;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .kontakt a.fax[href^="tel:"]:before {
   content: "\f02f";
   font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
   margin-right: 18px;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .kontakt a[href^="tel:"]:before {
   content: "\f095";
   font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
   margin-right: 18px;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .kontakt a[href^="http://"]:before {
   content: "\f0c1";
   font-family: 'FontAwesome',Arial,Tahoma,Verdana,Helvetica,sans-serif;
   margin-right: 8px;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 /*
 ---------------------------------
@@ -356,53 +288,42 @@ textarea {
 ---------------------------------
 */
 * {
-  margin: 0px;
-}
+  margin: 0px; }
 
 body, html {
   background-color: #eff0f9;
   font-family: 'Play', sans-serif;
   color: #333;
-  letter-spacing: 0.1em;
-}
+  letter-spacing: 0.1em; }
 
 body, html {
-  height: 100%;
-}
+  height: 100%; }
 
 nav {
   background-color: #c31200;
   width: 100%;
-  height: 0px;
-}
+  height: 0px; }
 
-header .logo {
-  content: url("../media/logo.png");
-  height: 200px;
-}
-
-@media (max-width: 500px) {
-  header .logo {
-    height: 100px;
-  }
-}
+header .img-container {
+  margin: auto;
+  max-width: 800px; }
+  header .img-container img {
+    max-width: 80%;
+    height: auto; }
 
 #line {
   background: url("../media/line.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  height: 10px;
-}
+  height: 10px; }
 
 a:link,
 a:visited,
 a:active {
-  color: #25354f;
-}
+  color: #25354f; }
 
 a:hover {
-  color: #c31200;
-}
+  color: #c31200; }
 
 /*
 ---------------------------------
@@ -410,105 +331,74 @@ a:hover {
 ---------------------------------
 */
 .text {
-  padding: 3%;
-}
-
-@media (max-width: 500px) {
-  .text {
-    padding: 0%;
-  }
-}
-
-.text .center {
-  text-align: justify;
-}
-
-.text p {
-  position: relative;
-  text-indent: 50px;
-}
-
-.text ul {
-  padding: 10px;
-  text-align: left;
-  display: table;
-  /* aha! */
-}
-
-.text ul li {
-  list-style-type: none;
-  padding: 0px;
-  display: table-row;
-  /* aha! */
-}
-
-.text ul li:before {
-  display: table-cell;
-  /* aha! */
-  content: "✓";
-  padding-right: 10px;
-  color: #999;
-  font-size: 0.7em;
-}
-
-.text .left {
-  text-align: left;
-}
-
-.text .left p {
-  padding-top: 30px;
-  font-weight: 700;
-}
+  padding: 3%; }
+  @media (max-width: 500px) {
+    .text {
+      padding: 0%; } }
+  .text .center {
+    text-align: justify; }
+  .text p {
+    position: relative;
+    text-indent: 50px; }
+  .text ul {
+    padding: 10px;
+    text-align: left;
+    display: table;
+    /* aha! */ }
+    .text ul li {
+      list-style-type: none;
+      padding: 0px;
+      display: table-row;
+      /* aha! */ }
+      .text ul li:before {
+        display: table-cell;
+        /* aha! */
+        content: "✓";
+        padding-right: 10px;
+        color: #999;
+        font-size: 0.7em; }
+  .text .left {
+    text-align: left; }
+    .text .left p {
+      padding-top: 30px;
+      font-weight: 700; }
 
 h2 {
   margin: 0px;
   color: #c31200;
   text-shadow: 2px 2px 2px #25354f;
-  margin-top: 40px;
-}
-
-h2#i1:before {
-  content: url(../media/icon2.png);
-  padding-right: 20px;
-  display: table-row;
-  opacity: 0.2;
-}
-
-h2#i2:before {
-  content: url(../media/icon1.png);
-  padding-right: 20px;
-  display: table-row;
-  opacity: 0.2;
-}
-
-h2#i3:before {
-  content: url(../media/icon3.png);
-  padding-right: 20px;
-  display: table-row;
-  opacity: 0.2;
-}
+  margin-top: 40px; }
+  h2#i1:before {
+    content: url(../media/icon2.png);
+    padding-right: 20px;
+    display: table-row;
+    opacity: 0.2; }
+  h2#i2:before {
+    content: url(../media/icon1.png);
+    padding-right: 20px;
+    display: table-row;
+    opacity: 0.2; }
+  h2#i3:before {
+    content: url(../media/icon3.png);
+    padding-right: 20px;
+    display: table-row;
+    opacity: 0.2; }
 
 .bigger {
   font-size: 120%;
-  margin: 20px 0px 20px 0px;
-}
-
-@media (max-width: 500px) {
-  .bigger {
-    font-size: 100%;
-    margin: 0px;
-  }
-}
+  margin: 20px 0px 20px 0px; }
+  @media (max-width: 500px) {
+    .bigger {
+      font-size: 100%;
+      margin: 0px; } }
 
 .fakturacne {
-  font-size: 80%;
-}
+  font-size: 80%; }
 
 .shadow {
   height: 5px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  z-index: 999999;
-}
+  z-index: 999999; }
 
 /*
 ---------------------------------
@@ -518,20 +408,17 @@ h2#i3:before {
 #parallax-A {
   background: url("../media/bckg1.jpg");
   min-height: 70%;
-  padding-bottom: 20px;
-}
+  padding-bottom: 20px; }
 
 #parallax-B {
   background: url("../media/bckg2.jpg");
   min-height: 70%;
-  padding-bottom: 20px;
-}
+  padding-bottom: 20px; }
 
 #parallax-C {
   background: url("../media/bckg3.jpg");
   height: 30%;
-  padding-bottom: 20px;
-}
+  padding-bottom: 20px; }
 
 /*
 ---------------------------------
@@ -541,12 +428,10 @@ h2#i3:before {
 .kontakt {
   text-align: left;
   padding: 5%;
-  color: #25354f;
-}
+  color: #25354f; }
 
 .kontakt a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 /*
 ------------------------------------------------------------------
@@ -563,8 +448,7 @@ h2#i3:before {
   width: 100%;
   background-color: black;
   position: fixed;
-  z-index: 100000;
-}
+  z-index: 100000; }
 
 .sticky {
   display: none;
@@ -576,36 +460,25 @@ h2#i3:before {
   width: 100%;
   background-color: #25354f;
   box-shadow: -1px 0px 8px 3px rgba(0, 0, 0, 0.75);
-  border-bottom: solid 4px black;
-}
-
-.sticky .logo-sticky {
-  margin-left: 20px;
-  height: 60px;
-}
-
-.sticky .logo-sticky img {
-  height: 100%;
-  position: absolute;
-}
-
-.sticky .menu-large {
-  visibility: hidden;
-  float: right;
-  margin-top: -70px;
-}
-
-.sticky .menu-large p {
-  display: inline-block;
-  padding: 30px;
-  font-weight: 700;
-  font-family: "Montserrat";
-  text-transform: uppercase;
-}
-
-.sticky .menu-mobile {
-  visibility: hidden;
-}
+  border-bottom: solid 4px black; }
+  .sticky .logo-sticky {
+    margin-left: 20px;
+    height: 60px; }
+    .sticky .logo-sticky img {
+      height: 100%;
+      position: absolute; }
+  .sticky .menu-large {
+    visibility: hidden;
+    float: right;
+    margin-top: -70px; }
+    .sticky .menu-large p {
+      display: inline-block;
+      padding: 30px;
+      font-weight: 700;
+      font-family: "Montserrat";
+      text-transform: uppercase; }
+  .sticky .menu-mobile {
+    visibility: hidden; }
 
 .menu {
   position: fixed;
@@ -613,13 +486,10 @@ h2#i3:before {
   margin-top: 10px;
   background-color: transparent;
   float: right;
-  z-index: 100000000;
-}
-
-.menu ul {
-  margin: 0px;
-  padding: 0px;
-}
+  z-index: 100000000; }
+  .menu ul {
+    margin: 0px;
+    padding: 0px; }
 
 .menu__list {
   padding: 0;
@@ -629,12 +499,10 @@ h2#i3:before {
   border: black solid 3px;
   transition: all 2s ease;
   background-color: transparent;
-  list-style: none;
-}
+  list-style: none; }
 
 .menu__list--unvisible {
-  display: none;
-}
+  display: none; }
 
 .menu__item {
   display: inline-block;
@@ -642,36 +510,28 @@ h2#i3:before {
   background-color: #25354f;
   padding: 5px;
   text-align: center;
-  margin: -10px;
-}
-
-.menu__item a {
-  font-weight: 700;
-  font-family: "Montserrat";
-  text-transform: uppercase;
-  color: #eff0f9;
-}
+  margin: -10px; }
+  .menu__item a {
+    font-weight: 700;
+    font-family: "Montserrat";
+    text-transform: uppercase;
+    color: #eff0f9; }
 
 .menu__link {
   text-decoration: none;
   color: #eff0f9;
   display: block;
-  padding: 10px;
-}
+  padding: 10px; }
 
 .menu__item:hover {
-  color: #25354f;
-}
-
-.menu__item:hover a {
-  background-color: #c31200;
-  color: #eff0f9;
-}
+  color: #25354f; }
+  .menu__item:hover a {
+    background-color: #c31200;
+    color: #eff0f9; }
 
 .menu_border {
   padding: 2px;
-  background-color: white;
-}
+  background-color: white; }
 
 .menu__btn {
   position: relative;
@@ -682,16 +542,13 @@ h2#i3:before {
   border-top: 5px solid #25354f;
   border-bottom: 5px solid #25354f;
   cursor: pointer;
-  margin: 3px;
-}
+  margin: 3px; }
 
 .menu__btn:active {
-  border-color: aqua;
-}
+  border-color: aqua; }
 
 .menu__btn:active::before {
-  background-color: aqua;
-}
+  background-color: aqua; }
 
 .menu__btn::before {
   display: block;
@@ -700,13 +557,10 @@ h2#i3:before {
   background-color: #25354f;
   top: 7px;
   position: absolute;
-  content: "";
-}
+  content: ""; }
 
 .menu__item {
-  display: block;
-}
+  display: block; }
 
 .menu__btn {
-  display: block;
-}
+  display: block; }
